# MiniOneRec

./: README.md  pyproject.toml  sft_mps.py  ts_rec_sft.sh
docs/: 方案总结.md  本地快速方案.md  本地评估方案.md  解构SFT代码.md
scripts/local/: evaluate_mps.py  run_sft_dry_run.sh
ts_rec_data/: Industrial_and_Scientific.description_keywords.json
